T1373 : "Bug in UI , Alignment of image is not correct and all background is not white as per UX Design."

--- a/src/assets/css/kq.less
+++ b/src/assets/css/kq.less
@@ -6,6 +6,7 @@
         // flex:9 0 auto;
         flex-grow: 9;
         width: 100%;
+        background: #fff;
         img {
             //max-width:100%;
             //width:100%;
@@ -22,6 +23,7 @@
         // flex:9 0 auto;
         flex-grow: 9;
         width: 100%;
+        background: #fff;
         img {
             //max-width:100%;
             //width:100%;
